# Qt-Chess

./: CMakeLists.txt  chess.rar  chessgame.cpp  chessgame.hpp  main.cpp  window.cpp  window.hpp  window.ui
lib/: chesssquare.cpp  chesssquare.hpp  fielditerator.cpp  fielditerator.hpp
src/: bishop.cpp  chessboard.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/headers/: bishop.hpp  chessboard.hpp  chesstypes.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
